[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/orange juice 2.0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Main.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )
mainGameScene = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 198.0
margin_top = 100.0
margin_right = 825.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "THE BOO GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="StartButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 71.0
margin_bottom = 121.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_mode = 1
text = "Start Game"
arrow_margin_from_center = 152

[node name="OptionsButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_mode = 1
text = "Options"
arrow_margin_from_center = 120

[node name="QuitButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 179.0
margin_bottom = 229.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
focus_mode = 1
text = "Quit"
arrow_margin_from_center = 83

[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
